--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
     <version>1.0-SNAPSHOT</version>
     <description>Demo project</description>
 
+         
+    <build>
+      <finalName>app</finalName>
+    </build>     
+         
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
